--- a/master_study/config_footprint.yaml
+++ b/master_study/config_footprint.yaml
@@ -13,12 +13,12 @@
       files_to_clone: # relative to the template folder
         - optics_specific_tools.py
         - clean_it.sh
-      run_on: "htc"
+      run_on: "local_pc" #"htc"
       htc_job_flavor: "microcentury" # optional parameter to define job flavor, default is espresso
     3: # Launch the tracking
       job_folder: "master_jobs_footprint/002_tracking_job"
       job_executable: 000_track.py # has to be a python file
       files_to_clone: # relative to the template folder
         - clean_it.sh
-      run_on: "htc"
+      run_on: "local_pc" #"htc"
       htc_job_flavor: "microcentury" #"tomorrow" # optional parameter to define job flavor, default is espress
